[gd_scene load_steps=16 format=1]

[ext_resource path="res://scritps/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/aladim/001.png" type="Texture" id=2]
[ext_resource path="res://scritps/anim_Aladim.gd" type="Script" id=3]
[ext_resource path="res://assets/images/aladim/3c.png" type="Texture" id=4]
[ext_resource path="res://scene/obstaculo.tscn" type="PackedScene" id=5]
[ext_resource path="res://scritps/gerador.gd" type="Script" id=6]
[ext_resource path="res://assets/font/font.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/images/aladim/diamond2.png" type="Texture" id=8]
[ext_resource path="res://assets/sound/soundGame.ogg" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]

resource/name = "BackAnim"
length = 5.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackAnim/Sprite1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6.4624, -10.6069 ), Vector2( -1271.78, -10.6069 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackAnim/Sprite2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1271.78, -10.661 ), Vector2( 0, -10.661 ) ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.4249

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( -3.0371, -0.107744 )
b = Vector2( 1281.04, 0.952671 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( 66.8021, 549.652 )
b = Vector2( -2.9963, 547.22 )

[sub_resource type="DynamicFont" id=6]

font/size = 100
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 7 )

[node name="Menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BackAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/BackAnim = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "BackAnim"

[node name="Sprite1" type="Sprite" parent="BackAnim"]

transform/pos = Vector2( -6.4624, -10.6069 )
transform/scale = Vector2( 0.321602, 0.327286 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="BackAnim"]

transform/pos = Vector2( 1271.78, -10.661 )
transform/scale = Vector2( 0.321725, 0.327345 )
texture = ExtResource( 2 )
centered = false

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 40.0

[node name="Fisica" type="RigidBody2D" parent="Control"]

z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.03008, 0, 0, 2.27045, 175.398, 165.743 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 8.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )

[node name="Natan" type="AnimatedSprite" parent="Control/Fisica"]

transform/pos = Vector2( 180.39, 175.291 )
transform/scale = Vector2( 0.565848, 0.465317 )
z/z = 2
frames = SubResource( 3 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Fisica"]

transform/pos = Vector2( 175.398, 165.743 )
transform/scale = Vector2( 2.03008, 2.27045 )
z/z = 2
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Limites" type="StaticBody2D" parent="Control"]

transform/pos = Vector2( 25.6177, 41.2559 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 0.843099, -22.593, -40.7389 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 18.4503, 0, 0, 2.34123, 25.258, -684.28 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Ceu" type="CollisionShape2D" parent="Control/Limites"]

transform/pos = Vector2( -22.593, -40.7389 )
transform/scale = Vector2( 1, 0.843099 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Terra" type="CollisionShape2D" parent="Control/Limites"]

transform/pos = Vector2( 25.258, -684.28 )
transform/scale = Vector2( 18.4503, 2.34123 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="Obstaculos" type="Node2D" parent="."]

z/z = 1

[node name="Obstaculo" parent="Obstaculos" instance=ExtResource( 5 )]

transform/pos = Vector2( 1457.01, 307.869 )
transform/scale = Vector2( 2.03008, 1.62443 )
z/z = 1

[node name="Gerador" type="Position2D" parent="Obstaculos"]

transform/pos = Vector2( 1458.64, 288.487 )
z/z = 3
script/script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Obstaculos/Gerador"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="RestartGame" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="Node2D" type="Node2D" parent="."]

editor/display_folded = true
z/z = 5

[node name="lblPontos" type="Label" parent="Node2D"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 578.0
margin/top = 1.0
margin/right = 668.0
margin/bottom = 121.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="vida1" type="Sprite" parent="Node2D"]

transform/pos = Vector2( 50.9363, 31.3846 )
transform/scale = Vector2( 0.131019, 0.126589 )
texture = ExtResource( 8 )

[node name="vida2" type="Sprite" parent="Node2D"]

transform/pos = Vector2( 140.936, 31.3846 )
transform/scale = Vector2( 0.131019, 0.126589 )
texture = ExtResource( 8 )

[node name="vida3" type="Sprite" parent="Node2D"]

transform/pos = Vector2( 230.936, 31.3846 )
transform/scale = Vector2( 0.131019, 0.126589 )
texture = ExtResource( 8 )

[node name="voando" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="Obstaculos/Gerador/Timer" to="Obstaculos/Gerador" method="_on_Timer_timeout"]

[connection signal="timeout" from="RestartGame" to="." method="_on_RestartGame_timeout"]


